:hammer: fix swagger
